# crosslogger-cli

./: Cargo.toml  Readme.md
crosslogger/: Cargo.toml
crosslogger-cli/src/: main.rs  runner.rs
crosslogger-cli/src/templates/: main.tiny
crosslogger-server/: Cargo.toml
crosslogger-server/src/: lib.rs  server.rs
crosslogger/src/: lib.rs
crosslogger/src/core/: logger.rs  mod.rs  writer.rs
